bug fixes; better spacing on definition displays, make sure all latin-character root words are italicized (not just langs in list), etc

--- a/style/dict_entry_style.css
+++ b/style/dict_entry_style.css
@@ -42,7 +42,7 @@
     display: flex;
     flex-direction: column;
     font-size: var(--small);
-    margin-bottom: var(--minimini);
+    margin-bottom: calc(var(--superMini) / 2);
     white-space: pre;
 }
 
@@ -51,7 +51,13 @@
     color: Grey;
     white-space: normal;
     display: block;
-    margin-top: var(--midSize);
+    margin-bottom: var(--superMini);
+}
+
+.other {
+}
+.defSpacer {
+    /* margin-bottom: calc(var(--superMini) / 2); */
 }
 
 .conj {
